new data version, 2 small perf optimisations